last day update

--- a/public/style/modal.css
+++ b/public/style/modal.css
@@ -74,4 +74,18 @@
   #modal form button:hover {
     background-color: #2fb85e;
   }
+
+  /* Isto é para o modal point created */
+
+  #modal.point .content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+  }
+
+  #modal.point h1{
+    color: white;
+    margin-top: 32px;
+  }
   
