--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/create-point.css">
     <link rel="stylesheet" href="/style/responsive.css">
+    <link rel="stylesheet" href="/style/modal.css">
     
 
 </head>
@@ -19,7 +20,7 @@
         
         {% include "partials/header.html"%}
 
-            <form action="#">
+            <form action="/savepoint" method = "POST">
                 <h1>Cadastro do ponto de coleta</h1>
 
                 <fieldset>
@@ -84,32 +85,32 @@
                     </legend>
 
                     <div class="items-grid">
-                        <li data-id="1" >
+                        <li data-id="Lâmpadas" >
                             <img src="/assets/lampadas.svg" alt="lampadas">
                             <span>Lâmpadas</span>
                         </li>
 
-                        <li data-id="2">
+                        <li data-id="Pilhas e Baterias">
                             <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
                             <span>Pilhas e Baterias</span>
                         </li>
 
-                        <li data-id="3">
+                        <li data-id="Papéis e Papelão">
                             <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
                             <span>Papéis e Papelão</span>
                         </li>
 
-                        <li data-id="4">
+                        <li data-id="Resíduos Eletrônicos">
                             <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
                             <span>Resíduos Eletrônicos</span>
                         </li>
 
-                        <li data-id="5">
+                        <li data-id="Resíduos Orgânicos">
                             <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
                             <span>Resíduos Orgânicos</span>
                         </li>
 
-                        <li data-id="6">
+                        <li data-id="Óleo de Cozinha">
                             <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
                             <span>Óleo de Cozinha</span>
                         </li>
@@ -120,9 +121,14 @@
                 
                 <button type="submit">Cadastrar ponto de coleta</button>
             </form>
+  
                    
     </div>
 
+            {% if saved  %}
+                {% include "partials/point-created.html"%}}
+            {% endif %}
+            
     <script src="/scripts/create-point.js"></script>
 </body>
 </html>
