--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -15,35 +15,41 @@
     
     {% include "partials/header.html" %}
 
-    <main>
+  <main>
+
+    {% if total > 0 %}
       <h4>
-        <strong>2 pontos</strong> encontrados
+        <strong> {{total}} pontos</strong> encontrados
       </h4>
       <div class="cards">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80" alt="colectoria">
-          <h1>Colectoria</h1>
-          <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-          <p>
-            Cidade, Estado <br/>
-            Endereco, bairro <br/> 
-            numero
-          </p>
-        </div>
 
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1516992654410-9309d4587e94?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="colectoria">
-          <h1>Papersider</h1>
-          <h3>Pápeis e Papelão</h3>
-          <p>
-            Cidade, Estado <br/>
-            Endereco, bairro <br/>
-            numero
-          </p>
-        </div>
-      </div>
+        {% for place  in places %}
+
+          <div class="card">
+            
+            <img src="{{ place.image }}" alt="{{ place.name }}">
+            <h1>{{ place.name }}</h1>
+            <h3>{{ place.itens }}</h3>
+            <p>
+              {{ place.city }}, {{ place.state }} <br/>
+              {{ place.address }} <br/>
+              {{ place.address2 }}
+            </p>
+          </div>
+
+        
+        {% endfor %}
+   </div> 
+    {%else%}
+    
+      <h4><strong>Nenhum</strong> ponto de coleta encontrado :(</h4>
+
+    {% endif %}
+
+
+
     </main>
+    
 
-  </div>
 </body>
 </html>
